--- a/snippets/styles-scripts.liquid
+++ b/snippets/styles-scripts.liquid
@@ -73,6 +73,7 @@
 <link href="{{ 'navbar-lavender.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom-product-cards.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'exciting-captions.css' | asset_url }}" rel="stylesheet">
+<link href="{{ 'section-headers-elegant.css' | asset_url }}" rel="stylesheet">
 <link href="{{ 'custom.css' | asset_url }}" rel="stylesheet">
 
 {% comment %}
